--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,5 +3,7 @@ services:
     image: postgres:16.3
     ports:
       - '5432:5432'
+    volumes:
+      - ./data:/docker-entrypoint-initdb.d
     env_file:
       - .env
