Setting up next.js for docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,16 @@
 services:
+  frontend:
+    image: node:22
+    ports:
+      - "8000:3000"
+    command: "npm run build && npm run start"
+    working_dir: /app
+    volumes:
+      - ./app:/app
+    environment:
+      - NODE_ENV="production"
+    env_file:
+      - .env
   db:
     image: postgres:16.3
     ports:
