--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -3,7 +3,7 @@ services:
     image: node:22
     ports:
       - "8000:3000"
-    command: "npm run dev"
+    command: sh -c "npm install && npm run dev"
     working_dir: /app
     volumes:
       - ./app:/app
